DOTENV + environment.yml CHANGES! | #63 route /upload returns sequential ids for uploaded images | #19 implemented crude access token, currently only in route /upload
